# minizinc-solvers

./: .gitignore  .trivyignore  Dockerfile  README.md  cosign-dev.key  cosign-dev.pub  flake.nix  push_to_harbor.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yaml  push.yaml
psp_solver_sdk/: __init__.py  config.py  core.py  queue.py  sat.py
psp_solver_sdk/routers/: version.py
psp_solver_sdk/sat/: __init__.py  process.py  response.py  results.py  solver.py
src/: app.py  config.py  local.py  main.py  minizinc.py  sat.py
src/routers/: health.py
tests/: mocks.py  test_endpoints.py  test_minizinc.py
tests/sat/: conftest.py  mocks.py  test_sat.py  test_sat_app.py
