[project]
name = "minizinc-solver"
version = "0.1.0"
dependencies = [
    "pika>=1.0,<2.0",
    "minizinc>=0.10.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=7,<8",
    "ruff>=0.6,<1.0",
    "bandit>=1.7,<2.0",
    "pip-audit>=2.7,<3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
