[project]
name = "minizinc-solver"
version = "0.1.0"
dependencies = [
    "minizinc>=0.10.0,<1.0.0",

    # Lib
    "pika>=1.0,<2.0",
    "aio-pika>=9.5.8,<10.0",
    "fastapi[standard]>=0.135.2,<0.136",
    "prometheus-fastapi-instrumentator>=7.1.0,<8.0",
    "gunicorn>=25.0,<26.0",
    "httpx>=0.28.1,<0.29.0",
    "itsdangerous>=2.2.0,<3.0",
]
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "pytest>=9,<10",
    "pytest-cov>=7,<8",
    "ruff>=0.6,<1.0",
    "bandit>=1.7,<2.0",
    "pip-audit>=2.7,<3.0",
    "pytest-asyncio>=1.2.0,<=2.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
